tests/ui/self-span.stderr
error[E0423]: expected value, found struct `S`
  --> $DIR/self-span.rs:14:23
   |
3  | pub struct S {}
   | --------------- `S` defined here
...
14 |         let _: Self = Self;
   |                       ^^^^ did you mean `S { /* fields */ }`?

error[E0308]: mismatched types
  --> $DIR/self-span.rs:13:21
   |
13 |         let _: () = self;
   |                --   ^^^^ expected `()`, found struct `S`
   |                |
   |                expected due to this
